tests/desugar/should_fail/invalid_list_pattern_top.csp
test1(xs^ys) = True
